[package]
name = "raylib5-sys"
version = "0.1.0"
authors = ["Rhelv <bionicvnb@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Low level bindings to Raylib v5. For Windows X64 only."
repository = "https://github.com/Rhelvetican/raylib5-sys"
homepage = "https://github.com/Rhelvetican/raylib5-sys"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true